# estore

./: .gitignore  pyproject.toml
src/estore/: main.py
src/estore/endpoints/: customer.py  product.py
src/estore/schemas/http/forms/: customer.py  product.py
src/estore/schemas/http/views/: customer.py  product.py
src/estore/shared/domain/: customer.py  order.py  product.py
tests/: test_estore.py
tests/commons/factories/: customer.py  order.py  product.py
tests/unit/shared/domain/: test_order.py  test_product.py
